# IPUM-Lab01

./: .dockerignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  README.md  app.py  docker-compose.yaml  inference.py  main.py  model.joblib  pyproject.toml  secrets.yaml  training.py
config/: .env.dev  .env.prod  .env.test
tests/: test_app.py
