[project]
name = "ipum-lab01-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.7.1",
    "fastapi>=0.135.2",
    "joblib>=1.5.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "gdown>=5.2.1",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
